# 42-Data-Science

./: README.md
Python-Piscine/Python0/ex00/: Hello.py
Python-Piscine/Python0/ex01/: format_ft_time.py
Python-Piscine/Python0/ex02/: find_ft_type.py
Python-Piscine/Python0/ex09/: README.md  setup.cfg
Python-Piscine/Python1/ex00/: give_bmi.py
Python-Piscine/Python1/ex01/: array2D.py  tester.py
Python-Piscine/Python1/ex02/: load_image.py
Python-Piscine/Python1/ex03/: load_image.py  zoom.py
Python-Piscine/Python1/ex04/: load_image.py  rotate.py
Python-Piscine/Python1/ex05/: load_image.py  pimp_image.py  tester.py
Python-Piscine/Python2/ex00/: load_csv.py
Python-Piscine/Python2/ex01/: aff_life.py  load_csv.py
Python-Piscine/Python2/ex02/: aff_pop.py  load_csv.py
Python-Piscine/Python2/ex03/: load_csv.py  projection_life.py
Python-Piscine/ex03/: NULL_not_found.py
Python-Piscine/ex04/: whatis.py
Python-Piscine/ex05/: building.py
Python-Piscine/ex06/: filterstring.py  ft_filter.py
Python-Piscine/ex07/: sos.py
Python-Piscine/ex08/: Loading.py
Python-Piscine/ex09/: LICENSE
Python-Piscine/ex09/ft_package/: __init__.py  ft_package.py
pycharm_docker/: Dockerfile  docker-compose.yml
