[metadata]
name = ft_package
version = 0.0.1
description = A sample test package
long_description = file: README.md
long_description_content_type = text/markdown
author = eagle
author_email = eagle@42.fr
license = MIT
url = https://github.com/eagle/ft_package

[options.packages.find]
include = ft_package
